// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsList Component - Snapshot Tests > displays all tags 1`] = `
<div>
  <div
    class=w-full h-full flex flex-wrap min-w-[85px]
  >
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag1:tag1
    </span>
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag2:tag2
    </span>
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag3:tag3
    </span>
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag4:tag4
    </span>
  </div>
</div>
`;

exports[`TagsList Component - Snapshot Tests > displays fewer tags along with Link 1`] = `
<div>
  <div
    class=w-full h-full flex flex-wrap min-w-[85px]
  >
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag1:tag1
    </span>
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag2:tag2
    </span>
    <span
      class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
      data-ods=badge
      style=max-width: -32px;
    >
      tag3:tag3
    </span>
    <a
      class=_link _link--no-text text-xs
      data-ods=link
      href=#
    >
      <span>
        ​
      </span>
      <span
        class=_icon _icon--chevron-double-right
        data-ods=icon
        role=presentation
      />
    </a>
  </div>
</div>
`;

exports[`TagsList Component - Snapshot Tests > displays modal on click of "More tags" link 1`] = `
<body>
  <div>
    <div
      class=w-full h-full flex flex-wrap min-w-[85px]
    >
      <span
        class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
        data-ods=badge
        style=max-width: -32px;
      >
        tag1:tag1
      </span>
      <span
        class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
        data-ods=badge
        style=max-width: -32px;
      >
        tag2:tag2
      </span>
      <a
        class=_link _link--no-text text-xs
        data-ods=link
        href=#
      >
        <span>
          ​
        </span>
        <span
          class=_icon _icon--chevron-double-right
          data-ods=icon
          role=presentation
        />
      </a>
    </div>
  </div>
</body>
`;
